Fixed a couple things
- changed title
- ‘get ready,’

--- a/zt12rp.html
+++ b/zt12rp.html
@@ -1,7 +1,7 @@
 
 <html>
 <head>
-  <title>Perception Study</title>
+  <title>What do you see?</title>
   <script src="js/jquery.min.js"></script>
   <script src="js/mmturkey.js"></script>
   <script src="js/jquery.preload.js"></script>
@@ -39,7 +39,7 @@
   </p>
   <p class="block-text">Aim to be fast and accurate.
     Click 'start' to begin viewing the images.</p>
-  <button type="button" onclick="this.blur(); practice.pass()">Start</button>
+  <button type="button" onclick="this.blur(); practice.next()">Start</button>
 </div>
     
 <div class="slide" id="stage">
@@ -110,7 +110,7 @@
     </b>
     <br><br>
   </p>
-  <button type="button" onclick="this.blur(); experiment.pass()">Start</button>
+  <button type="button" onclick="this.blur(); experiment.next()">Start</button>
 </div>
     
 <div class="slide" id="finished">
